-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
69e2b261036eae77c4f0cfad320d2cecb7a87728 (qt/qtmultimedia/dev) 83d39e84e886120507d06ae6eb0964888a4ce9a8 (qt/qtmultimedia/6.2)
-
2021wk40POAndroid&Mobile
Steps to reproduce:
1. Open audiorecorder/audiosource/audiooutput example
2. Plug in headset
3. Expand a list of available devices
Expected:
Plugged in device should be available for use
Actual:
Device is not present on the list
- resulted from
-
QTBUG-93460
Test Android Examples
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-96956 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 376763,5 | Android: Fix for List of available devices issue | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 376889,2 | Android: Fix for List of available devices issue | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |