Android: Fix for List of available devices issue

After fix the list of output devices will be update.

Pick-to: 6.2
Fixes: QTBUG-96956
Change-Id: Iaae3e1098ed11fb21477cd7dcf2a6054f169ddea
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>